--- a/public/app/main/featured-items.jade
+++ b/public/app/main/featured-items.jade
@@ -2,5 +2,5 @@
   .panel-heading.text-center Featured Items
   .panel-body
     .row(ng-repeat="item in items | filter:{featured:true}")
-      .col-md-12 {{item.name}}
-        //a(href="/courses/{{course._id}}") {{course.title}}
+      .col-md-12
+        a(href="/items/{{item._id}}") {{item.title}}
