Naming project "Stock Chart"

--- a/public/app/main/main.jade
+++ b/public/app/main/main.jade
@@ -1,7 +1,7 @@
 .container
   .jumbotron
-    h1 SPABoilerplate
-    p Welcome to SPABoilerplate! The most comprehensive and complete collection of items on the web.
+    h1 Stock Chart
+    p Welcome to Stock Chart! Technical Analysis on the web.
 
   .row
     .col-md-6
