--- a/server/views/index.jade
+++ b/server/views/index.jade
@@ -4,8 +4,8 @@ block main-content
   .navbar.navbar-inverse.navbar-fixed-top
     .container
       .navbar-header
-        a.navbar-brand(href="/") SPABoilerplate
-          h6 - Boilerplate for Single Page Application
+        a.navbar-brand(href="/") Stock Chart
+          h6 - Technical Analysis Application
       .navbar-collapse.collapse
         ul.nav.navbar-nav
           li
@@ -18,4 +18,4 @@ block main-content
     div(ng-view)
 
   footer.container.text-center
-    p &copy; 2014 SPABoilerplate Inc.
+    p &copy; 2014 Stock Chart Inc.
