chart container and svg angular sample work

--- a/public/css/site.styl
+++ b/public/css/site.styl
@@ -31,3 +31,17 @@ footer
 .toast-success
   background-color #13987e
 
+.chart-container
+  height: calc(100vh - 73px)
+  width: calc(100vw - 2px)
+  overflow: auto
+  direction: rtl
+  padding: 0px;
+  border: 1px solid black
+  .chart-content
+    direction: ltr
+    height: 100%
+    width: 5000px
+    .ohclbars
+      height: 100%
+      width: 100%
