--- a/server/includes/scripts.jade
+++ b/server/includes/scripts.jade
@@ -18,3 +18,5 @@ script(type="text/javascript", src="/app/items/mvItemListCtrl.js")
 script(type="text/javascript", src="/app/items/mvItem.js")
 script(type="text/javascript", src="/app/items/mvCachedItems.js")
 script(type="text/javascript", src="/app/items/mvItemDetailCtrl.js")
+script(type="text/javascript", src="/app/charts/mvChartListCtrl.js")
+script(type="text/javascript", src="/app/data/dji_d_2014-1896.json")
