--- a/public/css/site.styl
+++ b/public/css/site.styl
@@ -33,15 +33,17 @@ footer
 
 .chart-container
   height: calc(100vh - 73px)
-  width: calc(100vw - 2px)
+  width: calc(100vw - 102px)
   overflow: auto
   direction: rtl
   padding: 0px;
   border: 1px solid black
+  margin-left: 50px;
+  margin-right: 50px;
   .chart-content
     direction: ltr
     height: 100%
     width: 5000px
     .ohclbars
-      height: 100%
-      width: 100%
+      height: calc(100% - 2px)
+      width: calc(100% - 2px)
