Implement svg css tranform for coordinate system

--- a/public/css/site.styl
+++ b/public/css/site.styl
@@ -47,3 +47,5 @@ footer
     .ohclbars
       height: calc(100% - 2px)
       width: calc(100% - 2px)
+      transform: rotate(180deg)
+      transform-origin: 50% 50%
