Inital OHCL chart

--- a/public/css/site.styl
+++ b/public/css/site.styl
@@ -37,15 +37,14 @@ footer
   overflow: auto
   direction: rtl
   padding: 0px;
-  border: 1px solid black
-  margin-left: 50px;
-  margin-right: 50px;
+  border: 1px solid #d6d6d6
   .chart-content
     direction: ltr
     height: 100%
-    width: 5000px
+    width: 10000px
     .ohclbars
-      height: calc(100% - 2px)
-      width: calc(100% - 2px)
+      height: 100%
+      width: 100%
+      stroke: black
       transform: rotate(180deg)
       transform-origin: 50% 50%
