--- a/public/app/charts/chart-list.jade
+++ b/public/app/charts/chart-list.jade
@@ -1,7 +1,7 @@
 .container.chart-container
-  div.chart-content
+  div.chart-content(xscroll)
     svg.ohclbars
       path.chart__pie(ng-repeat='arc in arcs' ng-attr-fill='{{arc.c}}' ng-attr-d='{{arc.d}}')
       path.line(ng-attr-d='{{linePath()}}')
       circle(r='5' ng-repeat='p in points' ng-attr-cx='{{p.x}}' ng-attr-cy='{{p.y}}')
-      path.ohcl(ng-repeat='ohcl in ohcls' ng-attr-d='{{ohcl.d}}')
+      path.ohcl(ng-repeat='ohcl in ohcls | viewfilter:startXIndex:viewLen' ng-attr-d='{{ohcl.d}}')
