--- a/public/css/site.styl
+++ b/public/css/site.styl
@@ -32,8 +32,9 @@ footer
   background-color #13987e
 
 .chart-container
-  height: calc(100vh - 73px)
-  width: calc(100vw - 102px)
+  float: left
+  height: calc(100vh - 78px)
+  width: calc(100vw - 82px)
   overflow: auto
   direction: rtl
   padding: 0px;
@@ -48,3 +49,16 @@ footer
       stroke: black
       transform: rotate(180deg)
       transform-origin: 50% 50%
+.yruler
+  height: calc(100vh - 78px)
+  width: 80px
+  float: left
+  border: 1px solid #fff
+  ul
+    display: table
+    list-style-type: none
+    height: 100%
+    padding: 0px
+    padding-left: 8px
+    li
+      display: table-row
