Fix header layout

--- a/public/css/site.styl
+++ b/public/css/site.styl
@@ -1,11 +1,9 @@
 body
-  padding-top 69px
+  padding-top 60px
 
-.navbar-header a.navbar-brand
-  margin-top -15px
-  margin-bottom -20px
-  h6
-    color #ccc
+.navbar {
+  margin-bottom 9px;  
+}
 
 footer
   padding-left 15px
@@ -33,7 +31,7 @@ footer
 
 .chart-container
   float: left
-  height: calc(100vh - 78px)
+  height: calc(100vh - 69px)
   width: calc(100vw - 82px)
   overflow: auto
   direction: rtl
@@ -50,7 +48,7 @@ footer
       transform: rotate(180deg)
       transform-origin: 50% 50%
 .yruler
-  height: calc(100vh - 78px)
+  height: calc(100vh - 69px)
   width: 80px
   float: left
   border: 1px solid #fff
