--- a/server/views/index.jade
+++ b/server/views/index.jade
@@ -4,8 +4,7 @@ block main-content
   .navbar.navbar-inverse.navbar-fixed-top
     .container
       .navbar-header
-        a.navbar-brand(href="/") Stock Chart
-          h6 - Technical Analysis Application
+        a.navbar-brand(href="/") Stock Charts
       .navbar-collapse.collapse
         ul.nav.navbar-nav
           li
