--- a/public/css/site.styl
+++ b/public/css/site.styl
@@ -1,3 +1,5 @@
+@import 'site_color.styl'
+
 body
   padding-top 60px
 
@@ -36,7 +38,7 @@ footer
   overflow: auto
   direction: rtl
   padding: 0px;
-  border: 1px solid #d6d6d6
+  border: 1px solid $grey
   .chart-content
     direction: ltr
     height: calc(100% - 2px)
@@ -51,7 +53,7 @@ footer
   height: calc(100vh - 69px)
   width: 80px
   float: left
-  border: 1px solid #fff
+  border: 1px solid $white
   ul
     display: table
     list-style-type: none
