Zooming and favicon(png)

--- a/server/includes/layout.jade
+++ b/server/includes/layout.jade
@@ -1,8 +1,8 @@
 doctype html
 html
   head
-    title Stock Chart
-    link(href="/favicon.ico", rel="shortcut icon", type="image/x-icon")
+    title SC
+    link(href="/favicon.png", rel="shortcut icon", type="image/png")
     link(rel="stylesheet", href="/vendor/bootstrap/dist/css/bootstrap.css")
     link(rel="stylesheet", href="/vendor/toastr/toastr.css")
     link(rel="stylesheet", href="/css/site.css")
