--- a/public/css/site.styl
+++ b/public/css/site.styl
@@ -35,7 +35,7 @@ footer
   .chart-content
     direction: ltr
     height: calc(100% - 2px)
-    width: 10000px
+    width: calc(100% - 2px)
     .ohclbars
       height: 100%
       width: 100%
