--- a/public/css/site.styl
+++ b/public/css/site.styl
@@ -32,6 +32,7 @@ footer
   direction: rtl
   padding: 0px;
   border: 1px solid $grey
+  cursor: crosshair
   .chart-content
     direction: ltr
     height: calc(100% - 2px)
