--- a/public/css/site.styl
+++ b/public/css/site.styl
@@ -43,6 +43,10 @@ footer
       stroke: black
       transform: rotate(180deg)
       transform-origin: 50% 50%
+    .crosshair
+      stroke-dasharray: 8,8
+      stroke-width: 0.5
+
 .yruler
   height: calc(100vh - 69px)
   width: 80px
