--- a/public/app/charts/chart-list.jade
+++ b/public/app/charts/chart-list.jade
@@ -1,6 +1,7 @@
 .container.chart-container
   div.chart-content(xscroll resize msd-wheel='xZooming($event, $delta, $deltaX, $deltaY)')
-    svg.ohclbars
+    svg.ohclbars(ng-mousemove='drawCrosshair($event)')
+      path.crosshair(ng-attr-d='{{crosshair}}')
       path.ohcl(ng-repeat='ohcl in ohcls | viewfilter:startXIndex:viewLen' ng-attr-d='{{ohcl.d}}')
 div.yruler
       ul
